[package]
name = "concat-with"
version = "0.2.8"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/concat-with"
homepage = "https://magiclen.org/concat-with"
keywords = ["concat", "line", "comma", "space", "join"]
categories = ["no-std", "rust-patterns"]
description = "Extend the function of the `concat!` macro in `std`."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
